objects/Job_Line__c/Job_Line__c.object-meta.xml
<CustomObject>
    <label>Job Line</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Job Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>