objects/Job_Line__c/fields/Balancing__c.field-meta.xml
<CustomField>
    <fullName>Balancing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balancing</label>
    <type>Checkbox</type>
</CustomField>