objects/Job_Line__c/fields/Fitment_Location__c.field-meta.xml
<CustomField>
    <fullName>Fitment_Location__c</fullName>
    <label>Fitment Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S-1</fullName>
            </value>
            <value>
                <fullName>S-2</fullName>
            </value>
            <value>
                <fullName>D-1</fullName>
            </value>
            <value>
                <fullName>D-2</fullName>
            </value>
            <value>
                <fullName>D-3</fullName>
            </value>
            <value>
                <fullName>D-4</fullName>
            </value>
            <value>
                <fullName>D-5</fullName>
            </value>
            <value>
                <fullName>D-6</fullName>
            </value>
            <value>
                <fullName>D-7</fullName>
            </value>
            <value>
                <fullName>D-8</fullName>
            </value>
            <value>
                <fullName>T-1</fullName>
            </value>
            <value>
                <fullName>T-2</fullName>
            </value>
            <value>
                <fullName>T-3</fullName>
            </value>
            <value>
                <fullName>T-4</fullName>
            </value>
            <value>
                <fullName>T-5</fullName>
            </value>
            <value>
                <fullName>T-6</fullName>
            </value>
            <value>
                <fullName>T-7</fullName>
            </value>
            <value>
                <fullName>T-8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>