objects/Job_Line__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>JOB__c</referenceTo>
    <relationshipLabel>Job Lines</relationshipLabel>
    <relationshipName>Job_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>