objects/Job_Line__c/fields/Mounting__c.field-meta.xml
<CustomField>
    <fullName>Mounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mounting</label>
    <type>Checkbox</type>
</CustomField>