objects/Job_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Job Lines</relationshipLabel>
    <relationshipName>Job_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>