objects/Job_Line__c/fields/Tire_Description__c.field-meta.xml
<CustomField>
    <fullName>Tire_Description__c</fullName>
    <label>Tire Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>